# logger_pimpl

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
include/: logger.hpp
src/: main.cpp  spd_logger.cpp
